force-app/main/default/objects/COBPrimaryIDDocument__c/COBPrimaryIDDocument__c.object-meta.xml
<CustomObject>
    <description>The details submitted for a primary document (licence or passport), including the original OCR extractions which may have been edited</description>
    <label>COB Primary ID Document</label>
    <nameField>
        <displayFormat>COBPID-{00000000}</displayFormat>
        <label>COB Primary ID Document Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>COB Primary ID Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>