force-app/main/default/objects/COBPrimaryIDDocument__c/fields/CountryOfIssueOCRServer__c.field-meta.xml
<CustomField>
    <fullName>CountryOfIssueOCRServer__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Temporal</complianceGroup>
    <description>OCR values for Country of Issue</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Country of Issue OCR Server</label>
    <length>255</length>
    <type>Text</type>
</CustomField>