force-app/main/default/objects/COBPrimaryIDDocument__c/fields/DaonDocumentId__c.field-meta.xml
<CustomField>
    <fullName>DaonDocumentId__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Temporal</complianceGroup>
    <description>The unique ID assigned the uploaded document in Daon IdentityX</description>
    <label>Daon Document Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>