force-app/main/default/objects/COBPrimaryIDDocument__c/fields/DaonLocationUri__c.field-meta.xml
<CustomField>
    <fullName>DaonLocationUri__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Temporal</complianceGroup>
    <description>The persistent location in Daon IdenityX of the licence image and associated data</description>
    <label>Daon Location Uri</label>
    <type>Url</type>
</CustomField>