force-app/main/default/objects/COBPrimaryIDDocument__c/fields/DateOfBirth__c.field-meta.xml
<CustomField>
    <fullName>DateOfBirth__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_Temporal</complianceGroup>
    <description>Date of birth as submitted by the user</description>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>