force-app/main/default/objects/COBPrimaryIDDocument__c/fields/DateOfBirthOCRMatch__c.field-meta.xml
<CustomField>
    <fullName>DateOfBirthOCRMatch__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Temporal</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Flag indicating whether there was any difference between the date of birth OCR and the value submitted by the user</description>
    <label>Date of Birth OCR Match</label>
    <type>Checkbox</type>
</CustomField>