force-app/main/default/objects/COBPrimaryIDDocument__c/fields/DateOfBirthOCRServer__c.field-meta.xml
<CustomField>
    <fullName>DateOfBirthOCRServer__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_Temporal</complianceGroup>
    <description>OCR values for Date of Birth</description>
    <label>Date of Birth OCR Server</label>
    <type>Date</type>
</CustomField>