force-app/main/default/objects/COBPrimaryIDDocument__c/fields/Dynamic_Form_Blank_Space_Placeholder__c.field-meta.xml
<CustomField>
    <fullName>Dynamic_Form_Blank_Space_Placeholder__c</fullName>
    <description>Formula field used to act as a Blank Space in dynamic form.
DO NOT EDIT the field label as there is an invisible empty space.</description>
    <formula>&quot;&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>​</label>
    <type>Text</type>
</CustomField>