force-app/main/default/objects/COBPrimaryIDDocument__c/fields/ExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>ExpiryDate__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Temporal</complianceGroup>
    <description>The expiry date as submitted by the user</description>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>