force-app/main/default/objects/COBPrimaryIDDocument__c/fields/ExpiryDateOCRMatch__c.field-meta.xml
<CustomField>
    <fullName>ExpiryDateOCRMatch__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Flag indicating whether there was any difference between the Expiry Date OCR and the value submitted by the user</description>
    <label>Expiry Date OCR Match</label>
    <type>Checkbox</type>
</CustomField>