force-app/main/default/objects/COBPrimaryIDDocument__c/fields/ExpiryDateOCRServer__c.field-meta.xml
<CustomField>
    <fullName>ExpiryDateOCRServer__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Temporal</complianceGroup>
    <description>OCR values for Expiry Date</description>
    <label>Expiry Date OCR Server</label>
    <type>Date</type>
</CustomField>