force-app/main/default/objects/COBPrimaryIDDocument__c/fields/Failed_Message__c.field-meta.xml
<CustomField>
    <fullName>Failed_Message__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Reason for failed message from API</description>
    <encryptionScheme>None</encryptionScheme>
    <label>System Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>