force-app/main/default/objects/COBPrimaryIDDocument__c/fields/FirstNameOCRServer__c.field-meta.xml
<CustomField>
    <fullName>FirstNameOCRServer__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_Temporal</complianceGroup>
    <description>OCR values for First Name</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>First Name OCR Server</label>
    <length>255</length>
    <type>Text</type>
</CustomField>