force-app/main/default/objects/COBPrimaryIDDocument__c/fields/IdDocumentType__c.field-meta.xml
<CustomField>
    <fullName>IdDocumentType__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Temporal</complianceGroup>
    <description>The primary form of ID chosen (licence, passport etc)</description>
    <label>Id Document Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>