force-app/main/default/objects/COBPrimaryIDDocument__c/fields/idxExtractedFaceId__c.field-meta.xml
<CustomField>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>To record extracted face id</description>
    <fullName>idxExtractedFaceId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Daon Extracted Face ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>