force-app/main/default/objects/COBPrimaryIDDocument__c/fields/LastNameOCRMatch__c.field-meta.xml
<CustomField>
    <fullName>LastNameOCRMatch__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Flag indicating whether there was any difference between the last name OCR and the value submitted by the user</description>
    <label>Last Name OCR Match</label>
    <type>Checkbox</type>
</CustomField>