force-app/main/default/objects/COBPrimaryIDDocument__c/fields/LastNameOCRServer__c.field-meta.xml
<CustomField>
    <fullName>LastNameOCRServer__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_Temporal</complianceGroup>
    <description>OCR values for Last Name</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Last Name OCR Server</label>
    <length>255</length>
    <type>Text</type>
</CustomField>