force-app/main/default/objects/COBPrimaryIDDocument__c/fields/Latest__c.field-meta.xml
<CustomField>
    <fullName>Latest__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Temporal</complianceGroup>
    <description>Compares OnboardingAttemptCount, and returns TRUE if the count is the same, hence it&apos;s the latest record</description>
    <formula>OnboardingAttemptCount__c = CustomerOnboardingApplication__r.OnboardingAttemptCount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Latest</label>
    <type>Checkbox</type>
</CustomField>