force-app/main/default/objects/COBPrimaryIDDocument__c/fields/LicenceCardNumber__c.field-meta.xml
<CustomField>
    <fullName>LicenceCardNumber__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Temporal</complianceGroup>
    <description>The unique card number as submitted by the user (TOKENISED)</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Licence Card Number (Tokenised)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>