force-app/main/default/objects/COBPrimaryIDDocument__c/fields/LicenceCardNumberOCRClient__c.field-meta.xml
<CustomField>
    <fullName>LicenceCardNumberOCRClient__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Temporal</complianceGroup>
    <description>OCR values for Licence Card Number</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Licence Card Number OCR Client</label>
    <length>255</length>
    <type>Text</type>
</CustomField>