force-app/main/default/objects/COBPrimaryIDDocument__c/fields/LicenceCardNumberOCRMatch__c.field-meta.xml
<CustomField>
    <fullName>LicenceCardNumberOCRMatch__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Flag indicating whether there was any difference between the licence card number OCR and the value submitted by the user</description>
    <label>Licence Card Number OCR Match</label>
    <type>Checkbox</type>
</CustomField>