force-app/main/default/objects/COBPrimaryIDDocument__c/fields/LicenceCardNumberOCRServer__c.field-meta.xml
<CustomField>
    <fullName>LicenceCardNumberOCRServer__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Sensitive_Personal_Information;Source_Temporal</complianceGroup>
    <description>OCR values for Licence Card Number</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Licence Card Number OCR Server</label>
    <length>255</length>
    <type>Text</type>
</CustomField>