force-app/main/default/objects/COBPrimaryIDDocument__c/fields/LicenceNumber__c.field-meta.xml
<CustomField>
    <fullName>LicenceNumber__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy - Sensitive Personal Information;Source - Temporal</complianceGroup>
    <description>Licence number as submitted by the user (TOKENISED)</description>
    <label>Licence Number (Tokenised)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>