force-app/main/default/objects/COBPrimaryIDDocument__c/fields/LicenceNumberOCRClient__c.field-meta.xml
<CustomField>
    <fullName>LicenceNumberOCRClient__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Sensitive_Personal_Information;Source_Temporal</complianceGroup>
    <description>OCR values for Licence Number</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Licence Number OCR Client</label>
    <length>255</length>
    <type>Text</type>
</CustomField>