force-app/main/default/objects/COBPrimaryIDDocument__c/fields/LicenceNumberOCRClientTransform__c.field-meta.xml
<CustomField>
    <fullName>LicenceNumberOCRClientTransform__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Temporal</complianceGroup>
    <description>Tokenisation transform type</description>
    <label>Licence Number OCR Client Transform</label>
    <length>255</length>
    <type>Text</type>
</CustomField>