force-app/main/default/objects/COBPrimaryIDDocument__c/fields/LicenceNumberOCRMatch__c.field-meta.xml
<CustomField>
    <fullName>LicenceNumberOCRMatch__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Flag indicating whether there was any difference between the licence number OCR and the value submitted by the user</description>
    <label>Licence Number OCR Match</label>
    <type>Checkbox</type>
</CustomField>