force-app/main/default/objects/COBPrimaryIDDocument__c/fields/LicenceNumberOCRServer__c.field-meta.xml
<CustomField>
    <fullName>LicenceNumberOCRServer__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Temporal</complianceGroup>
    <description>OCR values for Licence Number</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Licence Number OCR Server</label>
    <length>255</length>
    <type>Text</type>
</CustomField>