force-app/main/default/objects/COBPrimaryIDDocument__c/fields/MiddleNames__c.field-meta.xml
<CustomField>
    <fullName>MiddleNames__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_Temporal</complianceGroup>
    <description>Middle name(s) or initial as submitted by the user</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Middle Names</label>
    <length>255</length>
    <type>Text</type>
</CustomField>