force-app/main/default/objects/COBPrimaryIDDocument__c/fields/MiddleNamesOCRClient__c.field-meta.xml
<CustomField>
    <fullName>MiddleNamesOCRClient__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_Temporal</complianceGroup>
    <description>OCR values for Middle Names</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Middle Names OCR Client</label>
    <length>255</length>
    <type>Text</type>
</CustomField>