force-app/main/default/objects/COBPrimaryIDDocument__c/fields/MiddleNamesOCRMatch__c.field-meta.xml
<CustomField>
    <fullName>MiddleNamesOCRMatch__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Flag indicating whether there was any difference between the middle names OCR and the value submitted by the user</description>
    <label>Middle Names OCR Match</label>
    <type>Checkbox</type>
</CustomField>