force-app/main/default/objects/COBPrimaryIDDocument__c/fields/MiddleNamesOCRServer__c.field-meta.xml
<CustomField>
    <fullName>MiddleNamesOCRServer__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_Temporal</complianceGroup>
    <description>OCR values for Middle Names</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Middle Names OCR Server</label>
    <length>255</length>
    <type>Text</type>
</CustomField>