force-app/main/default/objects/COBPrimaryIDDocument__c/fields/PassportNumber__c.field-meta.xml
<CustomField>
    <fullName>PassportNumber__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy - Sensitive Personal Information;Source - Temporal</complianceGroup>
    <description>Passport number as submitted by the user (TOKENISED)</description>
    <label>Passport Number (Tokenised)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>