force-app/main/default/objects/COBPrimaryIDDocument__c/fields/PassportNumberOCRClient__c.field-meta.xml
<CustomField>
    <fullName>PassportNumberOCRClient__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Sensitive_Personal_Information;Source_Temporal</complianceGroup>
    <description>OCR values for Passport Number</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Passport Number OCR Client</label>
    <length>255</length>
    <type>Text</type>
</CustomField>