force-app/main/default/objects/COBPrimaryIDDocument__c/fields/PassportNumberOCRMatch__c.field-meta.xml
<CustomField>
    <fullName>PassportNumberOCRMatch__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Temporal</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Flag indicating whether there was any difference between the passport number OCR and the value submitted by the user</description>
    <label>Passport Number OCR Match</label>
    <type>Checkbox</type>
</CustomField>