force-app/main/default/objects/COBPrimaryIDDocument__c/fields/PassportNumberOCRServer__c.field-meta.xml
<CustomField>
    <fullName>PassportNumberOCRServer__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Temporal</complianceGroup>
    <description>OCR values for Passport Number</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Passport Number OCR Server</label>
    <length>255</length>
    <type>Text</type>
</CustomField>