force-app/main/default/objects/COBPrimaryIDDocument__c/fields/PersonaDocumentId__c.field-meta.xml
<CustomField>
    <fullName>PersonaDocumentId__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Temporal</complianceGroup>
    <description>The primary form of ID chosen (licence, passport etc)</description>
    <externalId>true</externalId>
    <label>Persona Document Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>