force-app/main/default/objects/COBPrimaryIDDocument__c/fields/StateOfIssue__c.field-meta.xml
<CustomField>
    <fullName>StateOfIssue__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Temporal</complianceGroup>
    <description>The state where the licence was issued, as submitted by the user</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>State of Issue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>