force-app/main/default/objects/COBPrimaryIDDocument__c/fields/Verification_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Verification_Date_Time__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>field to record verification date time</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Verification DateTime</label>
    <type>DateTime</type>
</CustomField>