force-app/main/default/objects/COBPrimaryIDDocument__c/fields/Verification_Failed_Reason__c.field-meta.xml
<CustomField>
    <fullName>Verification_Failed_Reason__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>field to specify reason why document failed</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Verification Failed Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>