force-app/main/default/objects/COBPrimaryIDDocument__c/fields/Verification_Status__c.field-meta.xml
<CustomField>
    <fullName>Verification_Status__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Current Status Of verified document</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Verification Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>