force-app/main/default/objects/COBPrimaryIDDocument__c/fields/Verified_By__c.field-meta.xml
<CustomField>
    <fullName>Verified_By__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>field to identify who verified document</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Verified By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>